Full project structure fix javafx config